--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,35 @@
 
     <div class="container">
         <header>
-           <h1>Lightning</h1>
+           <h1>Invernadero</h1>
         </header>
 
         <nav>
           <p>Select the parameters desired for the proper working of the system according to your needs.</p>
         </nav>
 
+        <div>
+          Temperatura: aca va la temp 
+          Humedad: aca va humedad del suelo
+        </div>
+
         <button type="button" id="operateButton" value = "true">Start</button>
         <form id="appFormId">
 
             <div class="article-containter">
             <article>
-              <h1>Photoresistor</h1>
-               Light intensity:  <input type="range" min="0" max="1023" step="1" value="0" id="light">
+              <h1>TEMPERATURE</h1>
+               MAX:  <input type="range" min="15" max="24" step="1" value="0" id="light">
+               MIN:  <input type="range" min="24" max="40" step="1" value="0" id="light">
             </article>
+           
             <article>
-              <h1>Sound Sensor</h1>
-               Decibels:  <input type="range" min="0" max="1023" step="1" value="0" id="sound">
+              <h1>HUMEDAD</h1>
+               MAX:  <input type="range" min="0" max="1023" step="1" value="0" id="sound">
+               MIN:  <input type="range" min="0" max="1023" step="1" value="0" id="sound">
             </article>
+            
+
             <article>
               <h1>Time</h1>
                Starting Hour:  <input type="number" min="0" max="23.5" step="0.5" value="0" id="startHour">
@@ -42,9 +52,6 @@
 
         </form>
 
-        <footer>
-            <p>Tomas Fernandez Martinez & Nicolas Velazquez</p>
-        </footer>
     </div>
 
 <script src="./jquery-3.2.0.min.js"></script>
