--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     document.getElementById("demo").innerHTML = data;
     document.getElementById("demo").innerHTML = 5 + 6;
    });
+
+   document.getElementById("demo").innerHTML = 5 + 69;
   </script>
 
 <h1>HEllo world</h1>
