--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
               <form id="humidityForm">
                 <p>Humedad</p>
                  <p>MAX:<!-- <output name="range" id="humidityMax">25</output> --></p>
-                 <input type="range" min="0" max="100" step="1" value="0" id="humidity-max">
+                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMax">
 
                  <p>MIN: <!-- <output name="range" id="humidityMin">25</output>  --></p>
-                 <input type="range" min="0" max="100" step="1" value="0" id="humidity-min">
+                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMin">
                  <button type="submit" class="btn btn-success btn-submit">Aplicar</button>
               </form>
             </div>
