--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,11 @@
               <form id="temperatureForm">
                 <p>Temperatura</p>
 
-                 <p>MAX: <!-- <output name="range" id="temperatureMax">24</output> --> </p>
-                 <input type="range" min="0" max="100" step="1" value="15" id="temperatureMax">
+                 <p>MAX: <output name="range" id="temperatureMax">24</output> </p>
+                 <input type="range" min="0" max="100" step="1" value="15" id="temperatureMax" onchange="temperatureMax.value = this.value">
 
-                 <p>MIN: <!-- <output name="range" id="temperatureMin">15</output> --> </p>
-                 <input type="range" min="0" max="100" step="1" value="0" id="temperatureMin">
+                 <p>MIN: <output name="range" id="temperatureMin">15</output> </p>
+                 <input type="range" min="0" max="100" step="1" value="0" id="temperatureMin" onchange="temperatureMin.value =  this.value">
 
                  <button type="submit" class="btn btn-success btn-submit">Aplicar</button>
              </form>
@@ -49,11 +49,11 @@
             <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12 information pull-right">
               <form id="humidityForm">
                 <p>Humedad</p>
-                 <p>MAX:<!-- <output name="range" id="humidityMax">25</output> --></p>
-                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMax">
+                 <p>MAX: <output name="range" id="humidityMax">25</output></p>
+                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMax" onchange="humidityMax.value =  this.value">
 
-                 <p>MIN: <!-- <output name="range" id="humidityMin">25</output>  --></p>
-                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMin">
+                 <p>MIN: <output name="range" id="humidityMin">25</output> </p>
+                 <input type="range" min="0" max="100" step="1" value="0" id="humidityMin" onchange="humidityMin.value =  this.value">
                  <button type="submit" class="btn btn-success btn-submit">Aplicar</button>
               </form>
             </div>
