--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
   <div class="container">
     <div class="row information-row">
         <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12 information">
-          <p>Temperatura:</p>
+          <p>Temperatura</p>
           <p id="temp"></p>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12 information pull-right">
-          <p>Humedad: 50%</p>
+          <p>Humedad</p>
+          <p id="hum"></p>
         </div>
     </div>
 
@@ -32,11 +33,11 @@
         <div class="article-containter">
           <article>
             <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12 information">
-              <form id="temperatureForm" oninput"x.value=parseInt(temperatureMax.value)">
+              <form id="temperatureForm">
                 <p>Temperatura</p>
 
-                 <p>MAX: <output name="range1" id="temperaturemo" for="temperatureMax"></output> </p>
-                 <input type="range" min="0" max="100" step="1" value="25" id="temperatureMax" >
+                 <p>MAX: <output name="range1" id="temperaturemo">25</output> </p>
+                 <input type="range" min="0" max="100" step="1" value="25" id="temperatureMax" onchange="temperaturemo.value = value">
 
                  <p>MIN: <!-- <output name="range2" id="temperatureMin">15</output> --> </p>
                  <input type="range" min="0" max="100" step="1" value="15" id="temperatureMin">
@@ -52,7 +53,7 @@
                 <p>Humedad</p>
                  <p>MAX: <!-- <output name="range3" id="humidityMax">25</output> --></p>
                  <input type="range" min="0" max="100" step="1" value="40" id="humidityMax" >
-                 onchange="humidityMax.value =  this.value"
+  
 
                  <p>MIN: <!-- <output name="range" id="humidityMin">25</output>  --></p>
                  <input type="range" min="0" max="100" step="1" value="20" id="humidityMin">
