Disabling bottons from the HTML

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                  <p>MIN: <output name="range2" id="temperatureMinO">15</output> </p>
                  <input type="range" min="0" max="100" step="1" value="15" id="temperatureMin" onchange="temperatureMinO.value = value">
 
-                 <button type="submit" class="btn btn-success btn-submit">Aplicar</button>
+                 <!-- <button type="submit" class="btn btn-success btn-submit">Aplicar</button> -->
               </form>
             </div>
           </article>
@@ -51,14 +51,14 @@
             <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12 information pull-right">
               <form id="humidityForm">
                 <p>Humedad</p>
-                 <p>MAX: <output name="range3" id="humidityMaxO">25</output></p>
+                 <p>MAX: <output name="range3" id="humidityMaxO">40</output></p>
                  <input type="range" min="0" max="100" step="1" value="40" id="humidityMax" onchange="humidityMaxO.value = value" >
   
 
-                 <p>MIN: <output name="range" id="humidityMinO">25</output> </p>
+                 <p>MIN: <output name="range" id="humidityMinO">20</output> </p>
                  <input type="range" min="0" max="100" step="1" value="20" id="humidityMin" onchange="humidityMinO.value = value">
                  
-                 <button type="submit" class="btn btn-success btn-submit">Guardar</button>
+                 <!-- <button type="submit" class="btn btn-success btn-submit">Guardar</button> -->
               </form>
             </div>
           </article>
